--- a/front-end/src/app/reports/reportdetails/reportdetails.component.html
+++ b/front-end/src/app/reports/reportdetails/reportdetails.component.html
@@ -1,66 +1,66 @@
 <div class="report-table-container">
     <div class="grid-row">
         <div class="grid-row__col grid-row__col--12">
-            <div class="transactions__btn-container">
-                <div class="transactions__tag-outer-wrapper">
-                    <div id="button-container" class="transactions__tag_wrapper">
-                        <div *ngIf="filters" class="transactions__tag_group">
+            <div class="reports__btn-container">
+                <div class="reports__tag-outer-wrapper">
+                    <div id="button-container" class="reports__tag_wrapper">
+                        <div *ngIf="filters" class="reports__tag_group">
                             <div *ngIf="filters.filterForms[0]">
-                                <button class="btn transactions__tag_btn transactions__btn-search-filter">
+                                <button class="btn reports__tag_btn reports__btn-search-filter">
                                     <span *ngFor="let formTag of filters.filterForms; let formIndex=index; let isLast=last">
                                         {{formTag}}
-                                        <i class="fas fa-window-close transactions__close-tag" (click)="removeTag('filterForms', formIndex)"></i>
+                                        <i class="fas fa-window-close reports__close-tag" (click)="removeTag('filterForms', formIndex)"></i>
                                         {{isLast ? '' : ' or '}}
                                     </span>
                                 </button>
                             </div>
                             <div *ngIf="filters.filterReports[0]">
-                                <button class="btn transactions__tag_btn transactions__btn-search-filter">
+                                <button class="btn reports__tag_btn reports__btn-search-filter">
                                     <span *ngFor="let reportTag of filters.filterReports; let reportTypeIndex=index; let isLast=last">
                                         {{displayReportTypes(reportTag)}}
-                                        <i class="fas fa-window-close transactions__close-tag" (click)="removeTag('filterReports', reportTypeIndex)"></i>
+                                        <i class="fas fa-window-close reports__close-tag" (click)="removeTag('filterReports', reportTypeIndex)"></i>
                                         {{isLast ? '' : ' or '}}
                                     </span>
                                 </button>
                             </div>
                             <div *ngIf="filters.filterAmendmentIndicators[0]">
-                                <button class="btn transactions__tag_btn transactions__btn-search-filter">
+                                <button class="btn reports__tag_btn reports__btn-search-filter">
                                     <span
                                         *ngFor="let amendmentIndicatorTag of filters.filterAmendmentIndicators; let amendmentIndicatorIndex=index; let isLast=last">
                                         {{displayAmendmentIndicator(amendmentIndicatorTag)}}
-                                        <i class="fas fa-window-close transactions__close-tag" (click)="removeTag('filterAmendmentIndicators', amendmentIndicatorIndex)"></i>
+                                        <i class="fas fa-window-close reports__close-tag" (click)="removeTag('filterAmendmentIndicators', amendmentIndicatorIndex)"></i>
                                         {{isLast ? '' : ' or '}}
                                     </span>
                                 </button>
                             </div>
                             <div *ngIf="filters.filterStatuss[0]">
-                                <button class="btn transactions__tag_btn transactions__btn-search-filter">
+                                <button class="btn reports__tag_btn reports__btn-search-filter">
                                     <span *ngFor="let status of filters.filterStatuss; let statusIndex=index; let isLast=last">
                                         {{displayStatusName(status)}}
-                                        <i class="fas fa-window-close transactions__close-tag" (click)="removeTag('filterStatuss', statusIndex)"></i>
+                                        <i class="fas fa-window-close reports__close-tag" (click)="removeTag('filterStatuss', statusIndex)"></i>
                                         {{isLast ? '' : ' or '}}
                                     </span>
                                 </button>
                             </div>
                             <div *ngIf="filters.filterCvgDateFrom && filters.filterCvgDateTo">
-                                <button class="btn transactions__tag_btn transactions__btn-search-filter">
+                                <button class="btn reports__tag_btn reports__btn-search-filter">
                                     {{filters.filterCvgDateFrom | date: 'MM/dd/yyyy'}} -
                                     {{filters.filterCvgDateTo | date: 'MM/dd/yyyy'}}
-                                    <i class="fas fa-window-close transactions__close-tag" (click)="removeTag('filterCvgDate')"></i>
+                                    <i class="fas fa-window-close reports__close-tag" (click)="removeTag('filterCvgDate')"></i>
                                 </button>
                             </div>
                             <div *ngIf="filters.filterFiledDateFrom && filters.filterFiledDateTo">
-                                <button class="btn transactions__tag_btn transactions__btn-search-filter">
+                                <button class="btn reports__tag_btn reports__btn-search-filter">
                                     {{filters.filterFiledDateFrom | date: 'MM/dd/yyyy'}} -
                                     {{filters.filterFiledDateTo | date: 'MM/dd/yyyy'}}
-                                    <i class="fas fa-window-close transactions__close-tag" (click)="removeTag('filterFiledDate')"></i>
+                                    <i class="fas fa-window-close reports__close-tag" (click)="removeTag('filterFiledDate')"></i>
                                 </button>
                             </div>
                             <div *ngIf="filters.filterDeletedDateFrom && filters.filterDeletedDateTo">
-                                <button class="btn transactions__tag_btn transactions__btn-search-filter">
+                                <button class="btn reports__tag_btn reports__btn-search-filter">
                                     {{filters.filterDeletedDateFrom | date: 'MM/dd/yyyy'}} -
                                     {{filters.filterDeletedDateTo | date: 'MM/dd/yyyy'}}
-                                    <i class="fas fa-window-close transactions__close-tag" (click)="removeTag('filterDeletedDate')"></i>
+                                    <i class="fas fa-window-close reports__close-tag" (click)="removeTag('filterDeletedDate')"></i>
                                 </button>
                             </div>
                         </div>
@@ -75,14 +75,21 @@
         </div>
     </div>
     <!--<table class="table table-striped table-hover table__sortable forms__trx-table">-->
-    <table class="table table-striped table-hover table__sortable transactions__table">
+    <table class="table table-striped table-hover table__sortable reports__table">
         <thead>
             <tr>
                 <!--<th class="forms__trx-table-checkbox">
                     <input *ngIf="isReportViewActive()"
-                        [(ngModel)]="allTransactionsSelected"
-                        type="checkbox" (change)="changeAllTransactionsSelected()">
+                        [(ngModel)]="allreportsSelected"
+                        type="checkbox" (change)="changeAllreportsSelected()">
                 </th> -->
+                <th class="reports__table-checkbox">
+                    <!-- *ngIf="isContactViewActive()" -->
+                    <input [@fadeInOut]  [(ngModel)]="allReportsSelected" type="checkbox"
+                    (change)="changeAllReportsSelected()">
+                    
+                </th>
+                
                 <th [@fadeInOut] *ngIf="isColumnVisible('form_type')" [class]="getSortClass('form_type')"
                     (click)="changeSortDirection('form_type')">Form
                 </th>
@@ -110,16 +117,17 @@
                 <th>
                     &nbsp;
                 </th>
-                <!-- <th class="bulk_action">
-                    <div *ngIf="isReportViewActive()" class="btn-group" 
+                <th class="bulk_action">
+                    <div [@fadeInOut] *ngIf="isReportViewActive()" class="btn-group" 
                             ngbDropdown role="group" aria-label="Action dropdown">
-                        <button class="btn btn-sm btn-primary reports__bulk_action_btn">
+                        <button class="btn btn-sm btn-primary reports__bulk_action_btn" 
+                            ngbDropdownToggle [disabled]="bulkActionDisabled">
                             <i class="fas fa-ellipsis-h"></i>
                         </button>
                         <div id="forms__trx-dropdown-action" class="dropdown-menu" ngbDropdownMenu>
-                            <button class="dropdown-item" (click)="viewAllSelected()">
+                            <!--<button class="dropdown-item" (click)="viewAllSelected()">
                                 <i class="fas fa-eye"></i>View
-                            </button>
+                            </button>-->
                             <button class="dropdown-item" (click)="printAllSelected()">
                                 <i class="fas fa-print"></i>Print
                             </button>
@@ -127,8 +135,36 @@
                                 <i class="fas fa-trash"></i>Trash
                             </button>
                         </div>
-                    </div>                        
-                </th>  -->
+                    </div> 
+                    <!--<div [@fadeInOut] *ngIf="isContactViewActive()" class="btn-group" ngbDropdown role="group"
+                    aria-label="Action dropdown">
+                    <button class="btn btn-sm btn-primary contacts__bulk_action_btn" 
+                      ngbDropdownToggle [disabled]="bulkActionDisabled">
+                      <i class="ellipsis-icon"></i>
+                    </button>
+                    <div id="contacts__dropdown-action" class="dropdown-menu" ngbDropdownMenu>
+                      <button class="dropdown-item" (click)="printAllSelected()">
+                        <i class="print-icon"></i> Print
+                      </button>
+                      <button class="dropdown-item" (click)="viewActivityAllSelected()">
+                        <i class="table-icon"></i> View Activity
+                      </button>
+                      <button class="dropdown-item" (click)="exportAllSelected()">
+                        <i class="file-export-icon"></i> Export
+                      </button>
+                      <button class="dropdown-item" (click)="trashAllSelected()">
+                        <i class="trash-icon"></i> Trash
+                      </button>
+                    </div>
+                  </div>-->
+                    <div [@fadeInOut] *ngIf="isRecycleBinViewActive()">
+                        <button class="btn btn-sm btn-primary reports__bulk_action_btn" 
+                          (click)="deleteRecyleBin()"
+                          [disabled]="bulkActionDisabled">
+                          <i class="trash-icon"></i>
+                        </button>
+                    </div>                            
+                </th> 
             </tr>
         </thead>
         <tbody>
@@ -137,7 +173,9 @@
                     <input [(ngModel)]="report.selected"
                             type="checkbox">
                 </td>-->
-
+                <td >
+                    <input [(ngModel)]="report.selected" type="checkbox" (click)="checkForMultiChecked($event)">
+                </td>
                 <td *ngIf="isColumnVisible('form_type')">{{report.form_type}}</td>
                 <td *ngIf="isColumnVisible('status')">{{report.status}}</td>
                 <td *ngIf="isColumnVisible('fec_id')">{{report.status === 'Filed' ? report.fec_id : '' }}</td>
@@ -151,9 +189,9 @@
                     {{report.status === 'Filed'? (report.filed_date| date: 'MM/dd/yyyy @ hh:mm:ss a') : (report.last_update_date| date: 'MM/dd/yyyy @ hh:mm:ss a')}}
                 </td>
                 <td *ngIf="(isColumnVisible('deleted_date') && isRecycleBinViewActive())">
-                    {{(report.deleted_date| date: 'MM/dd/yyyy @ hh:mm:ss a') }}
+                    {{(report.deleteddate| date: 'MM/dd/yyyy @ hh:mm:ss a') }}
                 </td>
-                <td>
+                <td text-align ="center !important" >
                     <div *ngIf="isRecycleBinViewActive()">
                         <button class="btn btn-sm btn-primary" (click)="restoreReport(report)">
                             <i class="undo-icon"></i>
@@ -164,12 +202,12 @@
                         *ngIf="isReportViewActive() && report.form_type !== 'F99' && report.status === 'Saved'"
                         class="btn-group" ngbDropdown role="group" aria-label="Action dropdown">
 
-                        <button class="btn btn-sm btn-primary" ngbDropdownToggle>
+                        <button class="btn btn-sm btn-primary" ngbDropdownToggle [disabled]="!bulkActionDisabled">
                             <i class="fas fa-ellipsis-h"></i>
                         </button>
 
 
-                        <div id="forms__trx-dropdown-action1" class="dropdown-menu" ngbDropdownMenu>
+                        <div id="forms__trx-dropdown-action1" ngbDropdownToggle   class="dropdown-menu" ngbDropdownMenu>
                             <button class="dropdown-item" (click)="editReport(report)">
                                 <i class="fas fa-edit"></i> Edit
                             </button>
@@ -189,11 +227,11 @@
                         *ngIf="isReportViewActive() && report.form_type !== 'F99' && report.status === 'Filed'"
                         class="btn-group" ngbDropdown role="group" aria-label="Action dropdown">
 
-                        <button class="btn btn-sm btn-primary" ngbDropdownToggle>
+                        <button class="btn btn-sm btn-primary" ngbDropdownToggle [disabled]="!bulkActionDisabled">
                             <i class="fas fa-ellipsis-h"></i>
                         </button>
                         <div id="forms__trx-dropdown-action2" class="dropdown-menu" ngbDropdownMenu>
-                            <button class="dropdown-item" *ngIf="report.status === 'Filed'" (click)="viewReport(report)">
+                            <button class="dropdown-item" (click)="viewReport(report)">
                                 <i class="fas fa-eye"></i> View
                             </button>
                             <button class="dropdown-item" (click)="amendReport(report)">
@@ -212,7 +250,7 @@
                         *ngIf="isReportViewActive() && report.form_type === 'F99' && report.status === 'Filed'"
                         class="btn-group" ngbDropdown role="group" aria-label="Action dropdown">
 
-                        <button class="btn btn-sm btn-primary" ngbDropdownToggle>
+                        <button class="btn btn-sm btn-primary" ngbDropdownToggle [disabled]="!bulkActionDisabled">
                             <i class="fas fa-ellipsis-h"></i>
                         </button>
                         <div id="forms__trx-dropdown-action3" class="dropdown-menu" ngbDropdownMenu>
@@ -232,7 +270,7 @@
                         *ngIf="isReportViewActive() && report.form_type === 'F99' && report.status === 'Saved'"
                         class="btn-group" ngbDropdown role="group" aria-label="Action dropdown">
 
-                        <button class="btn btn-sm btn-primary" ngbDropdownToggle>
+                        <button class="btn btn-sm btn-primary" ngbDropdownToggle [disabled]="!bulkActionDisabled">
                             <i class="fas fa-ellipsis-h"></i>
                         </button>
                         <div id="forms__trx-dropdown-action4" class="dropdown-menu" ngbDropdownMenu>
