--- a/front-end/src/app/reports/reportheader/reportheader.component.scss
+++ b/front-end/src/app/reports/reportheader/reportheader.component.scss
@@ -76,7 +76,7 @@
       }
     }
     
-    .transactions__btn-container {
+    .reports__btn-container {
       height: 100%;
       padding: 1em;
     }
@@ -112,34 +112,34 @@
     color:#0169a4;
   }
 
-  .transactions__btn-container {
+  .reports__btn-container {
     height: 100%;
     padding: 1em;
   }
 
-  .transactions__btn-search-filter {
+  .reports__btn-search-filter {
     margin: 0 3px;
     background-color: $shuttleGray;
     color: $white;
   }
 
-  .transactions__btn-search-filter-join {
+  .reports__btn-search-filter-join {
     float: left;
     padding: 10px 2px 0 2px;
   }
 
-  .transactions__trx-btn {
+  .reports__trx-btn {
     margin: 5px;
     width: 10em;
   }
 
-  .transactions__trx-search {
+  .reports__trx-search {
     width: 27%;
     float: right;
     margin-right: 5px;
   }
 
-  .transactions__trx-applied-filter-row {
+  .reports__trx-applied-filter-row {
     min-height: 48px;
   }
 
@@ -151,7 +151,7 @@
   }
 }
 
-.transactions__main-container {
+.reports__main-container {
   display: table;
   table-layout: fixed;
   min-height: $mainContentHeight;
@@ -162,7 +162,7 @@
   padding-left: 5px;
   margin-top: 15px;
   width: 100%;
-  .transactions__sidebar {
+  .reports__sidebar {
     background-color: $bombay;
     flex-grow: 1;
     display: none;
@@ -182,7 +182,7 @@
     }           
   }
 
-  .transactions__container {
+  .reports__container {
     padding-right: 10px;
     margin-bottom: 15px;
     //padding-left: 5px;
@@ -216,34 +216,34 @@
       }
     }
 
-    .transactions__btn-container {
+    .reports__btn-container {
       height: 100%;
       //padding: 1em;
     }
 
-    .transactions__btn-search-filter {
+    .reports__btn-search-filter {
       margin: 0 3px;
       background-color: $shuttleGray;
       color: $white;
     }
 
-    .transactions__btn-search-filter-join {
+    .reports__btn-search-filter-join {
       float: left;
       padding: 10px 2px 0 2px;
     }
 
-    .transactions__trx-btn {
+    .reports__trx-btn {
       margin: 5px;
       width: 10em;
     }
 
-    .transactions__trx-search {
+    .reports__trx-search {
       width: 27%;
       float: right;
       margin-right: 5px;
     }
 
-    .transactions__trx-applied-filter-row {
+    .reports__trx-applied-filter-row {
       min-height: 48px;
     }
 
