--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -39,12 +39,12 @@
     <div class="app__content-wrapper">
       <div class="app__committee-info">
         <div class="float-left">
-          <div class="committee-id">
+          <h1 class="committee-id">
             {{ committeeId }}
-          </div>
-          <div class="committee-name">
+          </h1>
+          <h2 class="committee-name">
             {{ committeeName }}
-          </div> 
+          </h2> 
         </div>
         <div class="float-right">
           <div class="float-right" *ngIf="showFormDueDate">
