--- a/front-end/src/app/app-layout/app-layout.component.scss
+++ b/front-end/src/app/app-layout/app-layout.component.scss
@@ -2,7 +2,7 @@
 
 .app-container {
   background-color: $mercury;
-  color: $black;
+  color: $mineShaft;
   font-family: $mainFontFamily;
   min-height: 100vh;
   overflow-y: hidden;
@@ -69,6 +69,7 @@
     footer {
       .app__footer {
         font-family: $mainFontFamily;
+        font-size: 1.1rem;
         @include media(mediumDesktop) {
           padding-left: 75px;
         }
@@ -96,6 +97,10 @@
     .navbar {
       background-color: $dustyGray;
       height: $topNavHeight;
+      font-family: 'Roboto', 'sans-serif';
+    font-size: 1rem;
+    font-weight: 400;
+    color: #212121;
       margin: 0 !important;
       padding: 0 !important;
       .navbar-toggler {
@@ -185,7 +190,7 @@
       z-index: 0;
       .app__committee-info {
         background-color: $mercury;
-        height: 120px;
+        height: 150px;
         padding-left: 60px;
         padding-right: 60px;
         padding-top: 35px;
@@ -209,13 +214,13 @@
           position: relative;
         }
         .committee-id {
-          font-size: 1.5em;
-          font-family: $committeeInfoFontFamily;
+          
+          font-family: $mainFontFamily;
           margin-right: 25px;
         }
         .committee-name {
-          font-size: 1em;
-          font-family: $committeeInfoFontFamily;
+          
+          font-family: $mainFontFamily;
         }
         .btn-edit {
           color: $black;
