--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.scss
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.scss
@@ -5,7 +5,10 @@
   margin-right: auto;
   min-height: 500px;
   position: relative;
-  
+  font-family: 'Roboto', 'sans-serif';
+    font-size: 1rem;
+    font-weight: 400;
+    color: #212121;
  
  .search {
   margin: auto;
