--- a/front-end/src/app/login/login.component.scss
+++ b/front-end/src/app/login/login.component.scss
@@ -40,7 +40,7 @@
       .grid-row__col {
         padding: 0;
         label {
-          font-family: $titleFontFamily;
+          font-family: $mainFontFamily;
         }
         .link {
           font-family: $mainFontFamily;
