--- a/front-end/src/app/shared/partials/preview/preview.component.scss
+++ b/front-end/src/app/shared/partials/preview/preview.component.scss
@@ -84,7 +84,7 @@
 					width: 100%;				    				
 				} 
 				.label {
-					font-family: $labelFontFamily;
+					font-family: $mainFontFamily;
 					font-weight: bold;
 					margin: 1em;
 					margin-left: 0;
