--- a/front-end/src/app/shared/scss/_custom-reset.scss
+++ b/front-end/src/app/shared/scss/_custom-reset.scss
@@ -24,7 +24,7 @@ ul {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $titleFontFamily;
+  font-family: $mainFontFamily;
   -webkit-margin-before: 0;
   -webkit-margin-after: 0;
   -webkit-margin-start: 0;
