--- a/front-end/src/app/shared/scss/_custom-variables.scss
+++ b/front-end/src/app/shared/scss/_custom-variables.scss
@@ -8,10 +8,8 @@ $screen-md-min: 992px;
 $screen-md-max: 1199px;
 $screen-lg-min: 1200px;
 
-$mainFontFamily: 'Karla', sans-serif;
-$titleFontFamily: 'Gandhi Serif Regular', serif;
-$labelFontFamily: 'Gandhi Serif Bold, serif';
-$committeeInfoFontFamily: 'Gandhi Serif Regular, serif';
+$mainFontFamily: 'Roboto', sans-serif;
+
 
 $sideBarWidth: 275px;
 $topNavHeight: 60px;
