--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.scss
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.scss
@@ -11,6 +11,8 @@
       @include clearfix();
     }
     .sidebar__nav {
+    
+    
       .sidebar__nav--header {
         position: relative;
         .sidebar-form-icon {
@@ -45,7 +47,7 @@
               }
             }
             .list-item__link {
-              font-family: $titleFontFamily;
+              font-family: $mainFontFamily;
               width: 197px;
             }
             .list-item__info {
@@ -109,7 +111,7 @@
       }
       .header-text {
         display: inline-block;
-        font-family: titleFontFamily;
+        font-family: mainFontFamily;
         margin-left: 5px;
         width: 202px;
       }
