--- a/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
+++ b/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
@@ -5,6 +5,8 @@
       {{determineItemRange()}} of {{config.totalItems}}
     </div>
   </div>
+ 
+    
   <table class="table table-striped table-hover table__sortable transactions__table">
     <thead>
       <tr>
@@ -88,58 +90,117 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let trx of transactionsModel | paginate: config; let i = index">
-        <td>
-          <input [(ngModel)]="trx.selected" type="checkbox" (click)="checkForMultiChecked($event)">
-        </td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('type')">{{trx.itemized ==='U' ? trx.type +' ('+ trx.itemized + ') ' : trx.type}}</td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('transactionId')">{{trx.transactionId}}</td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('name')">{{trx.name}}</td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('street')">{{trx.street}} {{trx.street2}}</td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('city')">{{trx.city}}</td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('state')">{{trx.state}}</td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('zip')">{{trx.zip | zipCode}}</td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('date')">{{trx.date | date: 'MM/dd/yyyy'}}</td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('purposeDescription')">{{trx.purposeDescription}}</td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('contributorEmployer')">{{trx.contributorEmployer}}</td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('contributorOccupation')">{{trx.contributorOccupation}}</td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('memoCode')">{{trx.memoCode}}</td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('memoText')">{{trx.memoText}}</td>
-        <td [@fadeInOut] *ngIf="isRecycleBinViewActive()">{{trx.deletedDate | date: 'MM/dd/yyyy'}}</td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('amount')" class="transactions__amount">
-          {{trx.amount | currency:'USD':'symbol-narrow':'1.2-2'}}
-        </td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('aggregate')" class="transactions__amount">
-          {{trx.aggregate | currency:'USD':'symbol-narrow':'1.2-2'}}
-        <td>
-          <div [@fadeInOut] *ngIf="isRecycleBinViewActive()">
-            <button class="btn btn-sm btn-primary" (click)="restoreTransaction(trx)">
-              <i class="undo-icon"></i>
-            </button>
-          </div>
-          <div [@fadeInOut] *ngIf="isTransactionViewActive()"
-              class="btn-group" ngbDropdown role="group"
-            aria-label="Action dropdown">
-            <button class="btn btn-sm btn-primary" ngbDropdownToggle>
-              <i class="ellipsis-icon"></i>
-            </button>
-            <div id="transactions__dropdown-action" class="dropdown-menu" ngbDropdownMenu>
-              <button class="dropdown-item" (click)="editTransaction(trx)">
-                <i class="edit-icon"></i> Edit
-              </button>
-              <button class="dropdown-item" (click)="printAllSelected(report)">
-                <i class="fas fa-print"></i> Print
-            </button>  
-              <button class="dropdown-item" (click)="cloneTransaction(trx)">
-                <i class="far fa-copy"></i> Clone
-              </button>
-              <button *ngIf="checkIfTrashable()" class="dropdown-item" (click)="trashTransaction(trx)">
-                <i class="trash-icon"></i> Trash
+        
+      <ng-container *ngFor="let trx of transactionsModel | paginate: config; let i = index;">
+        <tr>
+          <td>
+            <input [(ngModel)]="trx.selected" type="checkbox" (click)="checkForMultiChecked($event)">
+          </td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('type')">{{trx.itemized ==='U' ? trx.type +' ('+ trx.itemized + ') ' : trx.type}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('transactionId')">{{trx.TransactionId}}</td>
+          <td [@fadeInOut] [ngClass]="trx.child ? 'parent': ''" 
+              (click)="trx.child? trx.toggleChild = !trx.toggleChild: ''" *ngIf="isColumnVisible('name')">{{trx.name}}
+              <div *ngIf="trx.child" class="align_right arrow" [ngClass]="trx.toggleChild ? 'arrow-bottom' : 'arrow-top'"></div>
+          </td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('street')">{{trx.street}} {{trx.street2}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('city')">{{trx.city}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('state')">{{trx.state}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('zip')">{{trx.zip | zipCode}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('date')">{{trx.date | date: 'MM/dd/yyyy'}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('purposeDescription')">{{trx.purposeDescription}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('contributorEmployer')">{{trx.contributorEmployer}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('contributorOccupation')">{{trx.contributorOccupation}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('memoCode')">{{trx.memoCode}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('memoText')">{{trx.memoText}}</td>
+          <td [@fadeInOut] *ngIf="isRecycleBinViewActive()">{{trx.deletedDate | date: 'MM/dd/yyyy'}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('amount')" class="transactions__amount">
+            {{trx.amount | currency:'USD':'symbol-narrow':'1.2-2'}}
+          </td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('aggregate')" class="transactions__amount">
+            {{trx.aggregate | currency:'USD':'symbol-narrow':'1.2-2'}}
+          <td>
+            <div [@fadeInOut] *ngIf="isRecycleBinViewActive()">
+              <button class="btn btn-sm btn-primary" (click)="restoreTransaction(trx)">
+                <i class="undo-icon"></i>
               </button>
             </div>
-          </div>
-        </td>
-      </tr>
+            <div [@fadeInOut] *ngIf="isTransactionViewActive()"
+                class="btn-group" ngbDropdown role="group"
+              aria-label="Action dropdown">
+              <button class="btn btn-sm btn-primary" ngbDropdownToggle>
+                <i class="ellipsis-icon"></i>
+              </button>
+              <div id="transactions__dropdown-action" class="dropdown-menu" ngbDropdownMenu>
+                <button class="dropdown-item" (click)="editTransaction(trx)">
+                  <i class="edit-icon"></i> Edit
+                </button>
+                <button class="dropdown-item" (click)="printAllSelected(report)">
+                  <i class="fas fa-print"></i> Print
+              </button>  
+                <button class="dropdown-item" (click)="cloneTransaction(trx)">
+                  <i class="far fa-copy"></i> Clone
+                </button>
+                <button *ngIf="checkIfTrashable()" class="dropdown-item" (click)="trashTransaction(trx)">
+                  <i class="trash-icon"></i> Trash
+                </button>
+              </div>
+            </div>
+          </td>
+        </tr>
+        <tr [ngbCollapse]="trx.child? !trx.toggleChild: ''" *ngFor="let trxChild of trx.child;" class="child-bg">
+          <td style="padding-left: 1.5rem;">
+            <input [(ngModel)]="trxChild.selected" type="checkbox" (click)="checkForMultiChecked($event)">
+          </td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('type')">{{trxChild.itemized ==='U' ? trxChild.type +' ('+ trxChild.itemized + ') ' : trxChild.type}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('transactionId')">{{trxChild.transactionId}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('name')">{{trxChild.name}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('street')">{{trxChild.street}} {{trxChild.street2}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('city')">{{trxChild.city}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('state')">{{trxChild.state}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('zip')">{{trxChild.zip | zipCode}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('date')">{{trxChild.date | date: 'MM/dd/yyyy'}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('purposeDescription')">{{trxChild.purposeDescription}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('contributorEmployer')">{{trxChild.contributorEmployer}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('contributorOccupation')">{{trxChild.contributorOccupation}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('memoCode')">{{trxChild.memoCode}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('memoText')">{{trxChild.memoText}}</td>
+          <td [@fadeInOut] *ngIf="isRecycleBinViewActive()">{{trxChild.deletedDate | date: 'MM/dd/yyyy'}}</td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('amount')" class="transactions__amount">
+            {{trxChild.amount | currency:'USD':'symbol-narrow':'1.2-2'}}
+          </td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('aggregate')" class="transactions__amount">
+            {{trxChild.aggregate | currency:'USD':'symbol-narrow':'1.2-2'}}
+          <td>
+            <div [@fadeInOut] *ngIf="isRecycleBinViewActive()">
+              <button class="btn btn-sm btn-primary" (click)="restoreTransaction(trxChild)">
+                <i class="undo-icon"></i>
+              </button>
+            </div>
+            <div [@fadeInOut] *ngIf="isTransactionViewActive()"
+                class="btn-group" ngbDropdown role="group"
+              aria-label="Action dropdown">
+              <button class="btn btn-sm btn-primary" ngbDropdownToggle>
+                <i class="ellipsis-icon"></i>
+              </button>
+              <div id="transactions__dropdown-action" class="dropdown-menu" ngbDropdownMenu>
+                <button class="dropdown-item" (click)="editTransaction(trxChild)">
+                  <i class="edit-icon"></i> Edit
+                </button>
+                <button class="dropdown-item" (click)="printAllSelected(report)">
+                  <i class="fas fa-print"></i> Print
+              </button>  
+                <button class="dropdown-item" (click)="cloneTransaction(trxChild)">
+                  <i class="far fa-copy"></i> Clone
+                </button>
+                <button *ngIf="checkIfTrashable()" class="dropdown-item" (click)="trashTransaction(trxChild)">
+                  <i class="trash-icon"></i> Trash
+                </button>
+              </div>
+            </div>
+          </td>      
+        </tr>
+      </ng-container>
+      
       <tr *ngIf="isTransactionViewActive()">
         <td></td>
         <td *ngIf="isColumnVisible('type')"></td>
