Fne 784 sprint21 mahendra (#1082)
* FNE 784 changes

* FNE 784 changes

* FNE 784 changes

* FNE 784 changes

* FNE 784 changes

* FNE 784 changes

* FNE 784 changes

* FNE 784 changes

* FNE 784 changes

* FNE 784 changes

* FNE 784 changes

--- a/front-end/src/app/contacts/contacts-table/contacts-table.component.html
+++ b/front-end/src/app/contacts/contacts-table/contacts-table.component.html
@@ -14,7 +14,7 @@
         </th>
          <th [@fadeInOut] *ngIf="isColumnVisible('name')" [class]="getSortClass('name')" (click)="changeSortDirection('name')">Name
         </th>
-        <th [@fadeInOut] *ngIf="isColumnVisible('type')" [class]="getSortClass('type')" (click)="changeSortDirection('type')">Entity Type
+        <th [@fadeInOut] *ngIf="isColumnVisible('tentityTypeype')" [class]="getSortClass('entityType')" (click)="changeSortDirection('entityType')">Entity Type
         </th>
         <th [@fadeInOut] *ngIf="isColumnVisible('id')" [class]="getSortClass('id')" (click)="changeSortDirection('id')">Entity Number
         </th>
