--- a/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.scss
+++ b/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.scss
@@ -28,6 +28,9 @@
           }
         }
       }
+      .modal-title {
+        margin: 0!important;
+      }
       .warning-header {
         background-color: $crusta;
       }      
