--- a/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
+++ b/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
@@ -140,9 +140,12 @@
                 <button class="dropdown-item" (click)="cloneTransaction(trx)">
                   <i class="far fa-copy"></i> Clone
                 </button>
-                <button *ngIf="checkIfTrashable()" class="dropdown-item" (click)="trashTransaction(trx)">
+                <span [title]="trx.child ? 'This transaction cannot be deleted because of the linked sub transactions.':''">
+                <button [disabled]="trx.child ? true:false" *ngIf="checkIfTrashable()" 
+                  class="dropdown-item" (click)="trashTransaction(trx)">
                   <i class="trash-icon"></i> Trash
                 </button>
+                </span>
               </div>
             </div>
           </td>
