fix width for JF memo dropdown

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
@@ -140,11 +140,11 @@
             display: none;
           }
         }
-        #jfMemoDropdown,
-        #jfMemoDropdown-menu {
+        #jfMemoDropdown {
           width: 16em;
         }
         #jfMemoDropdown-menu {
+          min-width: 16em;
           left: 0 !important;
         }
         @include media(tablet) {
